--- a/PornTokF/PornTokF/Views/LoginPages/mainLogin.xaml
+++ b/PornTokF/PornTokF/Views/LoginPages/mainLogin.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PornTokF.Views.LoginPages.mainLogin">
     <ContentPage.Content>
-        <StackLayout Background="#333">
+        <StackLayout Background="#333" Margin="10">
+            <Button x:Name="set" Clicked="set_Clicked" Background="black" TextColor="white" Text="Настройки"/>
             <Button x:Name="like" Clicked="like_Clicked" Background="black" TextColor="white" Text="Лайки"/>
             <Button x:Name="sub" Clicked="sub_Clicked" Background="black" TextColor="white" Text="Подписки"/>
         </StackLayout>
