--- a/PornTokF/PornTokF/AppShell.xaml
+++ b/PornTokF/PornTokF/AppShell.xaml
@@ -17,15 +17,15 @@
     <Shell.Resources>
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
-                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.ForegroundColor" Value="White" />
-                <Setter Property="Shell.TitleColor" Value="White" />
-                <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
-                <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="White"/>
-                <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF"/>
-                <Setter Property="Shell.TabBarTitleColor" Value="White"/>
+                <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Dark=black, Default=white}" />
+                <Setter Property="Shell.ForegroundColor" Value="{AppThemeBinding Dark=white, Default=black}" />
+                <Setter Property="Shell.TitleColor" Value="{AppThemeBinding Dark=white, Default=black}" />
+                <Setter Property="Shell.DisabledColor" Value="{AppThemeBinding Dark=#B4FFFFFF, Default=#B4000000}" />
+                <Setter Property="Shell.UnselectedColor" Value="{AppThemeBinding Dark=#95FFFFFF, Default=#95000000}" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{AppThemeBinding Dark=black, Default=white}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Dark=white, Default=black}"/>
+                <Setter Property="Shell.TabBarUnselectedColor" Value="{AppThemeBinding Dark=#95FFFFFF, Default=#95000000}"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Dark=white, Default=black}"/>
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
