--- a/PornTokF/PornTokF/Views/LoginPages/mainLogin.xaml
+++ b/PornTokF/PornTokF/Views/LoginPages/mainLogin.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PornTokF.Views.LoginPages.mainLogin"
-             Background="#333">
+             Background="{AppThemeBinding Dark=#111, Default=#eee}">
     <ContentPage.Content>
         <StackLayout Margin="10">
-            <Button x:Name="set" Clicked="set_Clicked" Background="black" TextColor="white" Text="Настройки"/>
-            <Button x:Name="like" Clicked="like_Clicked" Background="black" TextColor="white" Text="Лайки"/>
-            <Button x:Name="sub" Clicked="sub_Clicked" Background="black" TextColor="white" Text="Подписки"/>
+            <Button x:Name="set" Clicked="set_Clicked" Background="{AppThemeBinding Dark=black, Default=white}" TextColor="{AppThemeBinding Dark=white, Default=black}" Text="Настройки"/>
+            <Button x:Name="like" Clicked="like_Clicked" Background="{AppThemeBinding Dark=black, Default=white}" TextColor="{AppThemeBinding Dark=white, Default=black}" Text="Лайки"/>
+            <Button x:Name="sub" Clicked="sub_Clicked" Background="{AppThemeBinding Dark=black, Default=white}" TextColor="{AppThemeBinding Dark=white, Default=black}" Text="Подписки"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
